update master code, because original is thrown away

--- a/test/OpensslRsaKeyWrapper/CMakeLists.txt
+++ b/test/OpensslRsaKeyWrapper/CMakeLists.txt
@@ -1,5 +1,5 @@
-project(OpensslRsaKeyWrapper)
 cmake_minimum_required(VERSION 3.10)
+project(OpensslRsaKeyWrapper)
 
 set(SRCS
 	${CMAKE_SOURCE_DIR}/src/Log.cpp
@@ -23,12 +23,25 @@ set_target_properties(crypto
 	${CMAKE_SOURCE_DIR}/lib/openssl/libs/libcrypto.so.3
 )
 
+add_library(gtest
+	STATIC
+	IMPORTED
+)
+
+set_target_properties(gtest
+	PROPERTIES IMPORTED_LOCATION
+	${CMAKE_SOURCE_DIR}/lib/gtest/libs/libgtest.a
+)
+
 include_directories(
 	${CMAKE_SOURCE_DIR}/include
 	${CMAKE_SOURCE_DIR}/lib/openssl/include
+	${CMAKE_SOURCE_DIR}/lib/gtest/include
 )
 
 target_link_libraries(
 	${PROJECT_NAME} PRIVATE
 	crypto
+	gtest
+	pthread
 )
