--- a/scripts/customer_openssl.cnf
+++ b/scripts/customer_openssl.cnf
@@ -1,8 +1,9 @@
 HOME			  = /home/hskim
-CERT_HOME		  = $HOME/certificates
-ROOTCA_HOME		  = $CERT_HOME/rootca
-INTERMEDIATE_HOME = $CERT_HOME/intermediate
-dir               = $INTERMEDIATE_HOME
+DATA_HOME		  = $HOME/ca
+ROOTCA_HOME		  = $DATA_HOME/root
+INTERMEDIATE_HOME = $DATA_HOME/intermediate
+CUSTOMER_HOME 	  = $DATA_HOME/customer
+dir               = $CUSTOMER_HOME
 
 [ ca ]
 # `man ca`
@@ -18,9 +19,7 @@ serial            = $dir/serial
 RANDFILE          = $dir/private/.rand
 
 # The root key and root certificate.
-#private_key       = $dir/private/intermediate.key.pem
 private_key		   = $INTERMEDIATE_HOME/private/intermediate.key.pem
-#certificate       = $dir/certs/intermediate.cert.pem
 certificate        = $INTERMEDIATE_HOME/certs/intermediate.cert.pem
 
 # For certificate revocation lists.
