--- a/files/sysbus/com.webos.service.certificatemanager.role.json.in
+++ b/files/sysbus/com.webos.service.certificatemanager.role.json.in
@@ -2,7 +2,7 @@
     "exeName":"@WEBOS_INSTALL_SBINDIR@/com.webos.service.certificatemanager",
     "type": "regular",
     "allowedNames": [
-        "com.webos.service.certificatemanager",
+        "com.webos.service.certificatemanager"
     ],
     "permissions": [
         {
@@ -16,4 +16,3 @@
         }
     ]
 }
-
