--- a/files/scripts/customer_openssl.cnf
+++ b/files/scripts/customer_openssl.cnf
@@ -19,8 +19,8 @@ serial            = $dir/serial
 RANDFILE          = $dir/private/.rand
 
 # The root key and root certificate.
-private_key		   = /usr/palm/services/com.webos.service.certificatemanager/scripts/intermediate.key.pem
-certificate        = /usr/palm/services/com.webos.service.certificatemanager/scripts/intermediate.cert.pem
+private_key		   = $INTERMEDIATE_HOME/private/intermediate.key.pem
+certificate        = $INTERMEDIATE_HOME/certs/intermediate.cert.pem
 
 # For certificate revocation lists.
 crlnumber         = $dir/crlnumber
@@ -34,7 +34,7 @@ string_mask       = utf8only
 utf8			  = no
 name_opt          = ca_default
 cert_opt          = ca_default
-default_days      = 3750
+default_days      = 3650
 email_in_dn		  = yes
 preserve          = no
 policy            = policy_loose
@@ -63,7 +63,7 @@ emailAddress            = optional
 
 [ req ]
 # Options for the `req` tool (`man req`).
-default_bits        = 4096
+default_bits        = 2048
 distinguished_name  = req_distinguished_name
 string_mask         = utf8only
 utf8			    = no
@@ -85,26 +85,12 @@ commonName                      = Common Name
 emailAddress                    = Email Address
 
 # Optionally, specify some defaults.
-countryName_default             = GB
-stateOrProvinceName_default     = England
-localityName_default            =
-0.organizationName_default      = Alice Ltd
-organizationalUnitName_default  =
-emailAddress_default            =
-
-[ v3_ca ]
-# Extensions for a typical CA (`man x509v3_config`).
-subjectKeyIdentifier = hash
-authorityKeyIdentifier = keyid:always,issuer
-basicConstraints = critical, CA:true
-keyUsage = critical, digitalSignature, cRLSign, keyCertSign
-
-[ v3_intermediate_ca ]
-# Extensions for a typical intermediate CA (`man x509v3_config`).
-subjectKeyIdentifier = hash
-authorityKeyIdentifier = keyid:always,issuer
-basicConstraints = critical, CA:true, pathlen:0
-keyUsage = critical, digitalSignature, cRLSign, keyCertSign
+countryName_default             = KR
+stateOrProvinceName_default     = Seoul
+localityName_default            = Seoul
+0.organizationName_default      = R&D
+organizationalUnitName_default  = SW
+emailAddress_default            = rnd@support.com
 
 [ usr_cert ]
 # Extensions for client certificates (`man x509v3_config`).
