update README files

--- a/files/launch/com.webos.service.certificatemanager.service.in
+++ b/files/launch/com.webos.service.certificatemanager.service.in
@@ -1,24 +1,12 @@
-@@@LICENSE
-#
-# Copyright (c) 2019 LG Electronics, Inc.
-#
-# Confidential computer software. Valid license from LG required for
-# possession, use or copying. Consistent with FAR 12.211 and 12.212,
-# Commercial Computer Software, Computer Software Documentation, and
-# Technical Data for Commercial Items are licensed to the U.S. Government
-# under vendor's standard commercial license.
-#
-# LICENSE@@@
-
-# SAMPLE service
-
 [Unit]
-Description=default - "%n"
+Description=webos - "%n"
 Requires=ls-hubd.service
 After=ls-hubd.service
 
 [Service]
 Type=simple
-EnvironmentFile=-/var/systemd/system/env/certificate-manager.env
-ExecStart=@WEBOS_INSTALL_SBINDIR@/certificate-manager
+OOMScoreAdjust=-500
+EnvironmentFile=-/var/systemd/system/env/com.webos.service.certificatemanager.env
+Environment=CHARSET=UTF-8
+ExecStart=/usr/sbin/com.webos.service.certificatemanager
 Restart=on-failure
