--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,7 +102,7 @@ target_link_libraries (${PROJECT_NAME}
 #webos_build_program(NAME ${PROJECT_NAME} ADMIN)
 install(TARGETS ${PROJECT_NAME} DESTINATION ${WEBOS_INSTALL_SBINDIR})
 webos_build_system_bus_files()
-webos_build_configured_file(files/systemd/com.webos.service.certificatemanager.service SYSCONFDIR systemd/system)
+webos_build_configured_file(files/launch/com.webos.service.certificatemanager.service SYSCONFDIR systemd/system)
 # for pmlog
 webos_build_configured_file(files/conf/pmlog/com.webos.service.certificatemanager.conf SYSCONFDIR pmlog.d)
 #webos_build_db8_files()
