--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(CertificateManagerProject)
+project(Root)
 
 set(CMAKE_CXX_STANDARD 11 )
 set(CMAKE_CXX_FLAGS "-O1 -Wall" ) 
@@ -8,4 +8,4 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O2" )
 set(CMAKE_CXX_FLAGS_MINSIZEREL "-Os" )
 
 add_subdirectory(src)
-add_subdirectory(test)
+#add_subdirectory(test)
