update engine codes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ project(certificateManager)
 
 set(ENSRCS
 	${CMAKE_SOURCE_DIR}/src/opensslengine/opensslEngine.cpp
+	${CMAKE_SOURCE_DIR}/src/opensslengine/opensslEngineWrapper.cpp
 )
 
 set(SRCS
